...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:horizontalSpacing="@dimen/brick_flow_layout_horizontal_spacing"
        app:verticalSpacing="@dimen/brick_flow_layout_vertical_spacing">

        <TextView
            android:id="@+id/when_conditon_label"
            style="@style/BrickText.Multiple"
            android:text="@string/brick_when_condition_when">
        </TextView>

        <TextView
            android:id="@+id/brick_when_condition_edit_text"
...
