...
              android:layout_alignParentBottom="true"
              android:background="@drawable/bottom_bar_background"
              android:orientation="horizontal" >

    <ImageButton
        style="@style/BottomBarImageButton"
        android:id="@+id/button_add"
        android:onClick="handleAddButton"
        android:src="@drawable/ic_plus" />

    <ImageView
        android:id="@+id/bottom_bar_separator"
        android:layout_width="wrap_content"
...
